# serialPro

./: CMakeLists.txt  README.MD
example/: msg_serializer_test.cpp  referee_serial_test.cpp  robot_serial_test.cpp  serial_test.cpp
include/serialPro/: refereeSerial.h  robotComm.h  serialPro.h
msg_serializer/: callback_manager.h  check.h  listener.h  msg_serialize.h  writer.h
src/: serialPro.cpp
